--- a/KeepInControl.Android/KeepInControl.Android.csproj
+++ b/KeepInControl.Android/KeepInControl.Android.csproj
@@ -96,6 +96,8 @@
       <Name>KeepInControl</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bkg.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
